# telegram-star-bot

./: .gitignore  config.py  env.example  main.py  pyproject.toml
bot/: config.py  processor.py  router.py  telegram_client.py  telegram_models.py  tunnel.py  webhook.py
migrations/: env.py
migrations/versions/: 0a0ff321242e_user_added_with_chat_as_it_s_child_with_.py  0da2e13d5c07_phone_number_must_be_uniqe.py  1f01166f3b80_.py  236bed100966_deleted_units_because_it_is_uncecassary_.py  2504aeb5c127_created_adminuser_table.py  4d6fb82b34ea_changed_teh_name_of_otp_token.py  53ee973556e3_.py  76055a8995eb_added_otp_failure_attempts_to_chat.py  7905ae9ca131_update.py  79100bba5271_add_phone_number_with_unique_constraint.py  7c3237e7aa81_updated_the_chat_output_data_model.py  7db989ab2e1d_making_the_name_of_the_placeholders_.py  7fcb558a6ab7_added_order_order_item_product_product_.py  821ae28fa91a_update.py  8fa3b80db84c_making_the_placeholder_name_uniqe_wasn_.py  9b23b9f545a9_add_phone_number_validated.py  a1cd93018a8c_for_better_control_added_the_last_.py  a3ee9aafa07e_i_added_an_emoji_symbol_for_product_for_.py  a96be0cdc935_for_state_management_in_telegram_i_.py  b66cd2a3b421_deleted_units_because_it_is_uncecassary_.py  bc1efb956181_added_last_time_verification_code_sent_.py  bd07f8a9c977_begun.py  beb59967c30f_add_pending_action_and_phone_input_.py  c1eee598e4b4_place_holder_name_needs_to_be_uniqe.py  e0aa963ac80a_making_the_placeholder_name_uniqe_.py  f8fe0060c8ce_updated_the_relationship_beteween_the_.py
src/: config.py  router.py  tunnel.py
src/bot/: __init__.py  (+7 more)
(+30 files in other folders)
